# celpix

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
.run/: celpix.run.xml
packaging/: celpix.icns
src/celpix/: __init__.py  __main__.py  app.py
src/celpix/core/: __init__.py  address.py  argb_grid.py  arrangement.py  context.py  document.py  draw.py  emustate.py  errors.py  index_grid.py  palette.py  quantize.py  transform.py
src/celpix/pipeline/: __init__.py  importer.py  pathway.py  pipeline.py
src/celpix/plugins/: __init__.py  base.py  discovery.py  formats.py  registry.py  trust.py
src/celpix/plugins/builtins/: __init__.py  _mask.py  _tile.py  chunky_codec.py  color_codec.py  container_read.py  direct_color_codec.py  indexed_codec.py  konami_rle.py  linear_codec.py  lz16.py  lz_command.py  m7_interleave.py  packed_codec.py  passthrough.py  planar_codec.py  raw_file.py  wide_codecs.py
src/celpix/project/: __init__.py  projectfile.py  workspace.py
src/celpix/resources/: __init__.py
src/celpix/resources/data/presets/palette/: argb8888-be.toml  (+14 more)
src/celpix/ui/: __init__.py  canvas.py  clipboard.py  color_editor.py  decompress_overlay.py  export.py  file_list_panel.py  hex_view_panel.py  main_window.py  palette_panel.py  render_bridge.py  slice_dialog.py  tools.py  tools_panel.py  undo_commands.py  widgets.py
src/celpix/ui/main_window/: __init__.py  color_editing.py  compression.py  entries.py  interpretation.py  navigation.py  palette_dock.py  palette_source.py  pixel_edit.py  selection.py  transfer.py  transform.py  window.py
src/celpix/undo/: __init__.py
tests/: conftest.py  test_address.py  test_arrangement.py  test_codecs.py  test_color_editor.py  test_compression.py  test_containers.py  test_discovery.py  test_draw.py  test_emustate.py  test_hex_view.py  test_palette.py  test_pipeline.py  test_pixel_edit.py  test_project.py  test_quantize.py  test_registry.py  test_resources.py  test_smoke.py  test_transform.py  test_ui.py  test_undo.py  test_view.py  test_widgets.py  test_workspace.py
(+68 files in other folders)
